Add ban, Close #22

--- a/src/frontend/admin_dashboard.html
+++ b/src/frontend/admin_dashboard.html
@@ -118,9 +118,29 @@
                             <th>Reporter</th>
                             <th>Reported User</th>
                             <th>Motivation</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody id="reports-table-body">
+                        <!-- Data will be populated here -->
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section class="dashboard-card" style="margin-top: 2rem;">
+            <h2>Banned Users</h2>
+            <div class="table-container">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th>Username</th>
+                            <th>Motivation</th>
+                            <th>Ban Expiry</th>
+                            <th>Remaining Duration</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="banned-users-table-body">
                         <!-- Data will be populated here -->
                     </tbody>
                 </table>
@@ -158,6 +178,38 @@
                             <input type="number" class="form-control" id="edit-lng" step="any" required>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Ban User Modal -->
+    <div class="modal fade" id="banUserModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Ban User</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="ban-user-form">
+                        <input type="hidden" id="ban-user-id">
+                        <p>Banning user: <strong id="ban-username-display"></strong></p>
+                        <div class="mb-3">
+                            <label for="ban-duration" class="form-label">Duration</label>
+                            <select class="form-control" id="ban-duration" required>
+                                <option value="1d">1 Day</option>
+                                <option value="1w">1 Week</option>
+                                <option value="1m">1 Month</option>
+                                <option value="forever">Forever</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="ban-reason" class="form-label">Reason</label>
+                            <input type="text" class="form-control" id="ban-reason" required>
+                        </div>
+                        <button type="submit" class="btn btn-danger w-100">Ban User</button>
                     </form>
                 </div>
             </div>
@@ -306,12 +358,24 @@
                     const dateStr = new Date(report.date).toLocaleDateString() + ' ' + new Date(report.date).toLocaleTimeString();
                     const reporterName = report.reporter ? report.reporter.username : 'Unknown';
                     const reportedName = report.reported ? report.reported.username : 'Unknown';
+                    const reportedId = report.reported ? report.reported._id : null;
+
+                    let actionButtons = '';
+                    if (reportedId) {
+                        if (report.reported.isBanned) {
+                            actionButtons = `<button class="btn btn-secondary btn-sm" disabled>Banned</button>`;
+                        } else {
+                            const safeUsername = reportedName.replace(/'/g, "\\'");
+                            actionButtons = `<button class="btn btn-danger btn-sm" onclick="openBanModal('${reportedId}', '${safeUsername}')">Ban</button>`;
+                        }
+                    }
 
                     row.innerHTML = `
                         <td>${dateStr}</td>
                         <td>${reporterName}</td>
                         <td>${reportedName}</td>
                         <td>${report.motivation}</td>
+                        <td>${actionButtons}</td>
                     `;
                     tableBody.appendChild(row);
                 });
@@ -320,11 +384,129 @@
             }
         }
 
+        // Open Ban Modal
+        window.openBanModal = function (id, username) {
+            document.getElementById('ban-user-id').value = id;
+            document.getElementById('ban-username-display').textContent = username;
+            document.getElementById('ban-reason').value = ''; // Reset reason
+
+            const modal = bootstrap.Modal.getOrCreateInstance(document.getElementById('banUserModal'));
+            modal.show();
+        };
+
+        // Ban User Form Handler
+        document.addEventListener('DOMContentLoaded', () => {
+            const banForm = document.getElementById('ban-user-form');
+            if (banForm) {
+                banForm.addEventListener('submit', async (e) => {
+                    e.preventDefault();
+                    const userId = document.getElementById('ban-user-id').value;
+                    const duration = document.getElementById('ban-duration').value;
+                    const reason = document.getElementById('ban-reason').value;
+
+                    try {
+                        const response = await fetch('/api/admin/ban', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ userId, duration, reason })
+                        });
+
+                        if (response.ok) {
+                            alert('User has been banned successfully.');
+                            const modalElement = document.getElementById('banUserModal');
+                            const modal = bootstrap.Modal.getInstance(modalElement);
+                            modal.hide();
+                            fetchReports(); // Refresh
+                            fetchBannedUsers();
+                        } else {
+                            const data = await response.json();
+                            alert(`Error banning user: ${data.message}`);
+                        }
+                    } catch (error) {
+                        console.error('Error banning user:', error);
+                        alert('Error banning user');
+                    }
+                });
+            }
+        });
+
+
+        async function fetchBannedUsers() {
+            try {
+                const response = await fetch('/api/admin/banned-users');
+                if (!response.ok) throw new Error('Failed to fetch banned users');
+                const users = await response.json();
+                const tableBody = document.getElementById('banned-users-table-body');
+                tableBody.innerHTML = '';
+
+                users.forEach(user => {
+                    const row = document.createElement('tr');
+
+                    let expiryDisplay = 'Forever';
+                    let remainingDisplay = 'Forever';
+
+                    if (user.banExpiresAt) {
+                        const expiryDate = new Date(user.banExpiresAt);
+                        expiryDisplay = expiryDate.toLocaleString();
+
+                        const now = new Date();
+                        const diffMs = expiryDate - now;
+
+                        if (diffMs > 0) {
+                            const diffDays = Math.floor(diffMs / (1000 * 60 * 60 * 24));
+                            const diffHrs = Math.floor((diffMs % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                            const diffMins = Math.floor((diffMs % (1000 * 60 * 60)) / (1000 * 60));
+                            remainingDisplay = `${diffDays}d ${diffHrs}h ${diffMins}m`;
+                        } else {
+                            remainingDisplay = 'Expired';
+                        }
+                    }
+
+                    row.innerHTML = `
+                        <td>${user.username}</td>
+                        <td>${user.banReason || 'No reason'}</td>
+                        <td>${expiryDisplay}</td>
+                        <td>${remainingDisplay}</td>
+                        <td>
+                             <button onclick="unbanUser('${user._id}', '${user.username}')" class="btn btn-success btn-sm">Unban</button>
+                        </td>
+                    `;
+                    tableBody.appendChild(row);
+                });
+            } catch (error) {
+                console.error('Error fetching banned users:', error);
+            }
+        }
+
+        async function unbanUser(userId, username) {
+            if (!confirm(`Are you sure you want to unban ${username}?`)) return;
+
+            try {
+                const response = await fetch('/api/admin/unban', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ userId })
+                });
+
+                if (response.ok) {
+                    alert(`${username} has been unbanned.`);
+                    fetchBannedUsers();
+                } else {
+                    const data = await response.json();
+                    alert(`Error unbanning user: ${data.message}`);
+                }
+            } catch (error) {
+                console.error('Error unbanning user:', error);
+                alert('Error unbanning user');
+            }
+        }
+
         document.addEventListener('DOMContentLoaded', async () => {
             fetchPlaces();
             fetchSports();
             fetchGames();
-            fetchReports(); // Added fetchReports fetch call
+            fetchReports();
+            fetchBannedUsers();
 
             const form = document.getElementById('add-place-form');
             form.addEventListener('submit', async (e) => {
@@ -463,7 +645,7 @@
                     sportSelect.value = sportId;
                 }
 
-                const modal = new bootstrap.Modal(document.getElementById('editPlaceModal'));
+                const modal = bootstrap.Modal.getOrCreateInstance(document.getElementById('editPlaceModal'));
                 modal.show();
 
             } catch (err) {
