--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -1,61 +1,46 @@
-<style>
-  .navbar-orange {
-    background-color: rgb(223, 103, 5);
-    padding-top: 15px;
-    color: white;
-    font-size: 20px;
-  }
-</style>
+<nav class="navbar">
+  <a href="/dashboard" class="nav-brand text-decoration-none">
+    <h1>TrentoArena</h1>
+  </a>
 
-<nav class="navbar navbar-orange">
-  <div class="container-fluid">
-    <a href="/dashboard" class="text-white text-decoration-none">
-      <h1>TrentoArena</h1>
-    </a>
-    <a class="nav-link" href="#" style="margin-left: 15px;"
+  <div class="nav-items">
+    <!-- Cerca -->
+    <a class="nav-link" href="#"
       onclick="event.preventDefault(); window.loadPopupSafely('/css/search_popup.css', '/js/search_popup.js', () => window.SearchPopupInstance);">
-      <div class="d-flex flex-column align-items-center">
-        <img src="/images/search.png" alt="Cerca" style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-        <span style="font-size: 12px;">Cerca</span>
-      </div>
+      <img src="/images/search.png" alt="Cerca">
+      <span>Cerca</span>
     </a>
-    <div class="flex-grow-1 d-flex justify-content-end">
-      <a class="nav-link" href="#" style="margin-right: 60px;"
-        onclick="event.preventDefault(); window.loadPopupSafely('/css/game_creation_popup.css', '/js/game_creation_popup.js', () => window.GameCreationPopup);">
-        <div class="d-flex flex-column align-items-center">
-          <img src="/images/add.png" alt="Crea Partita"
-            style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-          <span style="font-size: 12px;">Crea</span>
-        </div>
-      </a>
-      <a class="nav-link" href="/map" style="margin-right: 60px;">
-        <div class="d-flex flex-column align-items-center">
-          <img src="/images/map.png" alt="Mappa" style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-          <span style="font-size: 12px;">Mappa</span>
-        </div>
-      </a>
-      <a class="nav-link" href="/leaderboard.html" style="margin-right: 60px;">
-        <div class="d-flex flex-column align-items-center">
-          <img src="/images/trophy.png" alt="Classifica"
-            style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-          <span style="font-size: 12px;">Classifica</span>
-        </div>
-      </a>
-      <a class="nav-link" href="#" style="margin-right: 60px;"
-        onclick="event.preventDefault(); window.loadPopupSafely('/css/friend_requests_popup.css', '/js/friend_requests_popup.js', () => window.FriendRequestsPopup);">
-        <div class="d-flex flex-column align-items-center">
-          <img src="/images/bell.png" alt="Richieste"
-            style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-          <span style="font-size: 12px;">Richieste</span>
-        </div>
-      </a>
-      <a class="nav-link" href="/profile">
-        <div class="d-flex flex-column align-items-center">
-          <img src="/images/account.png" alt="Profilo"
-            style="height: 40px; width: auto; filter: brightness(0) invert(1);">
-          <span style="font-size: 12px;">Profilo</span>
-        </div>
-      </a>
-    </div>
+
+    <!-- Crea Partita -->
+    <a class="nav-link" href="#"
+      onclick="event.preventDefault(); window.loadPopupSafely('/css/game_creation_popup.css', '/js/game_creation_popup.js', () => window.GameCreationPopup);">
+      <img src="/images/add.png" alt="Crea Partita">
+      <span>Crea</span>
+    </a>
+
+    <!-- Mappa -->
+    <a class="nav-link" href="/map">
+      <img src="/images/map.png" alt="Mappa">
+      <span>Mappa</span>
+    </a>
+
+    <!-- Classifica -->
+    <a class="nav-link" href="/leaderboard">
+      <img src="/images/trophy.png" alt="Classifica">
+      <span>Classifica</span>
+    </a>
+
+    <!-- Richieste -->
+    <a class="nav-link" href="#"
+      onclick="event.preventDefault(); window.loadPopupSafely('/css/friend_requests_popup.css', '/js/friend_requests_popup.js', () => window.FriendRequestsPopup);">
+      <img src="/images/bell.png" alt="Richieste">
+      <span>Richieste</span>
+    </a>
+
+    <!-- Profilo -->
+    <a class="nav-link" href="/profile">
+      <img src="/images/account.png" alt="Profilo">
+      <span>Profilo</span>
+    </a>
   </div>
 </nav>
