--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -22,8 +22,14 @@
 
 <body class="bg-light">
 
-    <!-- Navbar Container -->
-    <div id="navbar-container"></div>
+    <div id="navbar"></div>
+    <script>
+        fetch("./utility/navbar.html")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("navbar").innerHTML = data;
+            });
+    </script>
 
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -76,14 +82,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Load Navbar
-        fetch('/utility/navbar.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('navbar-container').innerHTML = data;
-            });
-    </script>
     <script src="/js/leaderboard.js"></script>
 </body>
 
