Add dark theme, Close #17

--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body class="bg-light">
+<body class="">
 
     <div id="navbar"></div>
     <script>
@@ -58,7 +58,7 @@
 
                         <div class="table-responsive">
                             <table class="table table-hover align-middle">
-                                <thead class="table-light">
+                                <thead class="">
                                     <tr>
                                         <th scope="col" style="width: 10%;">#</th>
                                         <th scope="col" style="width: 70%;">Giocatore</th>
