--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -20,7 +20,8 @@
         }
 
         .filter-control {
-            background-color: white;
+            background-color: var(--card-bg);
+            color: var(--text-primary);
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
