--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -51,15 +51,13 @@
 
             <!-- Middle Column: User Details -->
             <div class="flex-grow-1">
-
-
                 <!-- ELO Statistics -->
                 <div id="eloStatsContainer" class="mb-5" style="display: none;">
                     <h5 class="fw-bold mb-3">ELO</h5>
                     <select id="eloSportSelect" class="form-select mb-3" aria-label="Select Sport for ELO">
                         <option selected disabled>Select a sport...</option>
                     </select>
-                    <div id="eloDisplay" class="text-center p-3 border rounded bg-light"
+                    <div id="eloDisplay" class="text-center p-3 border rounded"
                         style="min-height: 400px; display: flex; align-items: center; justify-content: center;">
                         <span class="text-muted" id="eloPlaceholder">Select a sport to see your rating history</span>
                         <canvas id="eloChart" style="display: none; width: 100%; height: 100%;"></canvas>
@@ -226,6 +224,12 @@
                                     }
 
                                     // Create Chart
+
+                                    // Detect Dark Mode
+                                    const isDarkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+                                    const textColor = isDarkMode ? '#e0e0e0' : '#666';
+                                    const gridColor = isDarkMode ? '#444' : '#ddd';
+
                                     chartInstance = new Chart(canvas, {
                                         type: 'line',
                                         data: {
@@ -246,7 +250,8 @@
                                             maintainAspectRatio: false,
                                             plugins: {
                                                 legend: {
-                                                    display: true
+                                                    display: true,
+                                                    labels: { color: textColor }
                                                 },
                                                 tooltip: {
                                                     callbacks: {
@@ -257,10 +262,16 @@
                                                 }
                                             },
                                             scales: {
+                                                x: {
+                                                    ticks: { color: textColor },
+                                                    grid: { color: gridColor }
+                                                },
                                                 y: {
                                                     beginAtZero: false,
                                                     suggestedMin: 1000,
-                                                    suggestedMax: 1400
+                                                    suggestedMax: 1400,
+                                                    ticks: { color: textColor },
+                                                    grid: { color: gridColor }
                                                 }
                                             }
                                         }
@@ -269,7 +280,7 @@
 
                                 // Auto-select first sport if available
                                 if (user.sportsElo.length > 0) {
-                                    sportSelect.selectedIndex = 1;
+                                    sportSelect.selectedIndex = 0; // Fixed index 0
                                     sportSelect.dispatchEvent(new Event('change'));
                                 }
                             }
@@ -414,12 +425,12 @@
                 const card = document.createElement('div');
                 card.className = 'col-md-6 col-lg-4';
 
-                let cardStyle = '';
+                let cardClass = '';
                 let badgeHtml = '';
                 let borderClass = '';
 
                 if (isFinished) {
-                    cardStyle = 'opacity: 0.9;';
+                    cardClass = 'opacity-75'; // Use bootstrap class or custom
                     // Determine outcome if userId is provided
                     if (currentUserId && game.participants) {
                         const participant = game.participants.find(p => {
@@ -429,23 +440,22 @@
 
                         if (participant) {
                             if (participant.winner) {
-                                cardStyle += 'background-color: #d1e7dd;'; // Greenish
-                                borderClass = 'border-success';
+                                cardClass += ' card-win';
                                 badgeHtml = '<span class="badge bg-success me-1">You Won! 🏆</span>';
                             } else {
-                                cardStyle += 'background-color: #f8d7da;'; // Reddish
-                                borderClass = 'border-danger';
+                                cardClass += ' card-loss';
                                 badgeHtml = '<span class="badge bg-danger me-1">You Lost</span>';
                             }
                         }
                     }
                     if (!badgeHtml) badgeHtml = '<span class="badge bg-secondary me-1">Finished</span>';
                 } else {
+                    cardClass = 'card-upcoming';
                     badgeHtml = `<span class="badge bg-secondary">${game.participants.length}/${game.maxParticipants}</span>`;
                 }
 
                 card.innerHTML = `
-                    <div class="card h-100 shadow-sm ${borderClass}" style="cursor: pointer; transition: transform 0.2s; ${cardStyle}" onclick="openGameDetails('${game._id}')">
+                    <div class="card h-100 shadow-sm ${cardClass}" style="cursor: pointer; transition: transform 0.2s;" onclick="openGameDetails('${game._id}')">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                 <h5 class="card-title fw-bold mb-0 text-primary">${sportName}</h5>
