--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -1,10 +1,9 @@
 <nav class="navbar">
-  <a href="/dashboard" class="nav-brand text-decoration-none">
-    <h1>TrentoArena</h1>
+  <a href="/dashboard" class="nav-brand" style="display: flex; align-items: center; text-decoration: none; color: inherit; margin-right: auto;">
+    <img src="/images/logo_TrentoArena.png" alt="TrentoArena" style="height: 60px; margin-right: 0px;">
   </a>
 
   <div class="nav-items">
-    <!-- Cerca -->
     <a class="nav-link" href="#"
       onclick="event.preventDefault(); window.loadPopupSafely('/css/search_popup.css', '/js/search_popup.js', () => window.SearchPopupInstance);">
       <img src="/images/search.png" alt="Cerca">
