--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -200,7 +200,7 @@
                                         const history = stat.history.sort((a, b) => new Date(a.date) - new Date(b.date));
 
                                         history.forEach(h => {
-                                            const date = new Date(h.date).toLocaleDateString();
+                                            const date = new Date(h.date).toLocaleDateString('it-IT');
                                             labels.push(date);
                                             data.push(h.elo);
                                         });
@@ -415,7 +415,7 @@
 
             games.forEach(game => {
                 const date = new Date(game.date);
-                const dateStr = date.toLocaleDateString();
+                const dateStr = date.toLocaleDateString('it-IT');
                 const timeStr = date.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
 
                 const sportName = game.sport ? game.sport.name : 'Unknown Sport';
