--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/popup_shared.css">
     <script src="/js/popup_manager.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -361,6 +362,22 @@
                             }
                         }
 
+                        // Badge Logic
+                        let badgeHtml = '';
+                        if (isFinished) {
+                            badgeHtml = '<span class="badge bg-secondary"><i class="bi bi-flag-fill me-1"></i>Finished</span>';
+                        } else {
+                            const current = game.participants.length;
+                            const max = game.maxParticipants;
+                            const percentage = current / max;
+
+                            let badgeClass = 'bg-success';
+                            if (percentage >= 1) badgeClass = 'bg-danger';
+                            else if (percentage >= 0.75) badgeClass = 'bg-warning text-dark';
+
+                            badgeHtml = `<span class="badge ${badgeClass}"><i class="bi bi-people-fill me-1"></i>${current}/${max}</span>`;
+                        }
+
                         const col = document.createElement('div');
                         col.className = 'col-md-6 col-lg-4';
                         col.innerHTML = `
@@ -368,7 +385,7 @@
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between mb-2">
                                         <h5 class="card-title fw-bold text-primary">${game.sport?.name || 'Sport'}</h5>
-                                        ${!isFinished ? `<span class="badge bg-secondary">${game.participants.length}/${game.maxParticipants}</span>` : '<span class="badge bg-secondary">Finished</span>'}
+                                        ${badgeHtml}
                                     </div>
                                     <h6 class="text-muted">${game.place?.name || 'Place'}</h6>
                                     <p class="card-text">📅 ${dateStr} at ${timeStr}</p>
