Fix navbar logo in dark mode, Close #44

--- a/src/frontend/utility/navbar.html
+++ b/src/frontend/utility/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
-  <a href="/dashboard" class="nav-brand" style="display: flex; align-items: center; text-decoration: none; color: inherit; margin-right: auto;">
-    <img src="/images/logo_TrentoArena.png" alt="TrentoArena" style="height: 60px; margin-right: 0px;">
+  <a href="/dashboard" class="nav-brand"
+    style="display: flex; align-items: center; text-decoration: none; color: inherit; margin-right: auto;">
+    <img src="/images/logo_TrentoArena.png" alt="TrentoArena" class="nav-logo">
   </a>
 
   <div class="nav-items">
